# School_feeding_last

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  backup_script.sh  docker-compose.yaml  dump.sql  pyproject.toml  script
docker-compose/: app.yaml  postgres.yaml  react.yaml
nginx/: nginx.conf
postgres_data/: postmaster.pid
postgres_data/base/1/: 2619  pg_internal.init
postgres_data/base/16684/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16685  174  175  2187  2228  2337  2579  2600  2600_fsm  2600_vm  (+200 more)
postgres_data/base/16688/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  (+322 more)
postgres_data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres_data/pg_xact/: 0000
school_feeding/: .env  dump.sql  dump_2024-04-23_07_29_57.sql  dump_2024-04-23_07_32_30.sql  dump_2024-04-23_07_57_43.sql  logs  manage.py  new.sql
school_feeding/main/: admin.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
school_feeding/school/: package-lock.json  package.json
school_feeding/school_feeding/: asgi.py  settings.py  urls.py  wsgi.py
static_volume/css/: main.0ca77b39.css  main.0ca77b39.css.map
static_volume/js/: main.a88b1a74.js  main.a88b1a74.js.map
(+105 files in other folders)
